Fecha de nacimiento, edad y estilos.

--- a/interfaz/WebContent/dependencies.html
+++ b/interfaz/WebContent/dependencies.html
@@ -1,1 +1,4 @@
 <link href="estilos.css" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" href="//code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css">
+<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+<script src="//code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
