--- a/interfaz/WebContent/para_mascota.html
+++ b/interfaz/WebContent/para_mascota.html
@@ -1,27 +1,28 @@
 <script>
+	function actualizarEdad(dateText, picker) {
+		var diff = new Date().getTime()
+				- $("#fecha_nacimiento").datepicker('getDate')
+						.getTime();
+		var dias = diff / (24 * 60 * 60 * 1000);
+		if (dias > 90) {
+			var meses = dias / 30;
+			if (meses > 12) {
+				var anios = dias / 365;
+				$("#edad").val(Math.round(anios) + " años");
+			} else {
+				$("#edad").val(Math.round(meses) + " meses");
+			}
+		} else {
+			$("#edad").val(Math.round(dias) + " dias");
+		}
+	}
 	$(function() {
 		$("#fecha_nacimiento").datepicker(
 				{
 					changeMonth : true,
 					changeYear : true,
 					dateFormat : "dd/mm/yy",
-					onSelect : function(dateText, picker) {
-						var diff = new Date().getTime()
-								- $("#fecha_nacimiento").datepicker('getDate')
-										.getTime();
-						var dias = diff / (24 * 60 * 60 * 1000);
-						if (dias > 90) {
-							var meses = dias / 30;
-							if (meses > 12) {
-								var anios = dias / 365;
-								$("#edad").val(Math.round(anios) + " años");
-							} else {
-								$("#edad").val(Math.round(meses) + " meses");
-							}
-						} else {
-							$("#edad").val(Math.round(dias) + " dias");
-						}
-					}
+					onSelect : actualizarEdad
 				});
 	});
 </script>
